--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,8 +21,8 @@
       <div class="izquierda"></div>
       <div class="derecha">
         <h1 class="np" >No te preocupes, <br>nosotros te ayudamos.</h1>
-        <p class="p">¿Aún no sabes que imprimir? Tenemos una gran<br> cantidad de diseños .stl a tu disposición, para inspirarte<br> o hacerte la vida más fácil, tu decides.</p>
-        <a class="but" href="">VISITAR DISEÑOS</a>
+        <p class="p">¿Aún no sabes que imprimir? Tenemos una gran<br> cantidad de diseños .stl a tu disposición, para inspirarte<br>  o hacerte la vida más fácil,  Tú  decides.</p>
+        <button class="but">VISITAR DISEÑOS</button>
       </div>
     </section>
     <section class="sections" id="service">
