--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
         <button class="but">VISITAR DISEÑOS</button>
       </div>
     </section>
-    <section class="sections" id="service">
-        <h1>Service</h1>
-        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
+    <section class="" id="pantalla-dividida" >
+      <div class="izquierda2">
+        <h1 class="np2" >Materiales de<br>
+          la mejor calidad.</h1>
+        <p class="p2">Cada uno de los componentes utilizados para nuestras impresiónes es monitoreado constantemente para asegurar un producto final de tu agrado.</p>
+        <button class="but2">COTIZA CON NOSOTROS</button>
+      </div>
+      <div class="derecha2">
+        
+      </div>
     </section>
     <section class="sections" id="contact">
         <h1>Contact</h1>
