--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/mai.css">
     <link rel="stylesheet" href="https://use.typekit.net/vgv7gtb.css">
-    <title><img class="logo" src="https://res.cloudinary.com/dovlgmcsj/image/upload/v1599082468/gozwiuwedx92vvoo8irc.png">devend</title>
+    <title>devend</title>
 </head>
 <body>
   <div class="container">
